--- a/index.html
+++ b/index.html
@@ -7,14 +7,54 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
     <div class="container">
-      <header></header>
-      <nav></nav>
-      <main></main>
-      <footer></footer>
+      <header>
+        <img src="./img/logo.png" alt="background" width="100" />
+        <span>eterson's Restaurant</span>
+      </header>
+      <nav>
+        <a href="#">HOME</a>
+        <a href="#">MENU</a>
+        <a href="#">ORDER ONLINE</a>
+        <a href="#">GIFT VOUCHER</a>
+        <a href="#">CONTACT</a>
+      </nav>
+      <main>
+        <h1>Let's ketchup</h1>
+        <p>
+          PETERSON'S re-imagines the wonders of South Indian fare in a space
+          that evokes a bygone era of a boisterous yet elegant India—all within
+          the heart of the North India.
+        </p>
+        <br />
+        <a href="mailto:xyz@xyz.com?Subject=Reservation">
+          MAKE RESERVATION &nbsp;
+          <em class="fa fa-envelope"></em>
+        </a>
+      </main>
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30712295.883571353!2d64.38923235697699!3d20.00601497897256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1653029067086!5m2!1sen!2sin"
+          title="map"
+          width="1024"
+          height="200"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
+      </div>
+      <footer>
+        <p>North India</p>
+      </footer>
     </div>
   </body>
 </html>
